# scripts-workshop

./: README.md
chatbot/: .gitignore  main.py  pyproject.toml
chatbot/rasa/: config.yml  domain.yml
chatbot/rasa/actions/: actions.py
chatbot/rasa/data/: nlu.yml  rules.yml  stories.yml
lua-api/: app.lua  categories.lua  products.lua
lua-api/models/: category.lua  product.lua
shop/: bun.lockb  demo.mov  package.json
shop-new/: package.json  turbo.json
shop-new/apps/server/: drizzle.config.ts  package.json  server.ts  tsconfig.json
shop-new/apps/server/src/actions/: productsActions.ts
shop-new/apps/server/src/api/: productsApi.ts
shop-new/apps/server/src/db/: db.sqlite  drizzle.ts  seed.ts
shop-new/apps/server/src/db/migrations/: 0000_early_alex_wilder.sql
shop-new/apps/server/src/db/migrations/meta/: 0000_snapshot.json  (+1 more)
shop-new/apps/server/src/db/schema/: categories.ts  products.ts
shop-new/apps/web/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
shop-new/apps/web/app/: entry.server.tsx  root.tsx
shop-new/apps/web/app/routes/: _index.tsx  products.tsx
shop-new/apps/web/app/schema/: products.schema.ts
shop/client/: bun.lockb  tsconfig.json
shop/client/app/: root.tsx
shop/client/app/components/: ErrorBoundary.tsx  ProductTile.tsx
shop/client/app/routes/: _index.tsx
shop/prisma/: dev.db  schema.prisma
shop/prisma/migrations/20240505132301_init/: migration.sql
shop/prisma/migrations/20240505134331_product_update/: migration.sql
shop/server/: bun.lockb  package.json  server.ts
tic-tac-toe/: tic_tac_toe.sh
