[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Michał Droś <michal.dros01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rasa = "^3.6.19"
discord-py = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
